# MerchantCore-API

./: .dockerignore  .env.example  .gitignore  API_DOCS.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.opencode/plans/: auth-implementation.md
alembic/: env.py
alembic/versions/: 4b0a0e274c4a_add_full_name_and_username_to_users.py  9aa7bdbed57c_initial_migration.py  f74c099dab6d_replace_verification_token_with_.py
app/: config.py  main.py
app/core/: cache.py  security.py
app/db/: session.py
app/models/: __init__.py  credit_entry.py  customer.py  notification.py  product.py  sale.py  transaction.py  user.py
app/routers/: auth.py  credit.py  customers.py  dashboard.py  notifications.py  pos.py  products.py  transactions.py  users.py
app/schemas/: credit_entry.py  customer.py  notification.py  product.py  sale.py  transaction.py  user.py
app/services/: __init__.py  email.py  notification.py  rate_limiter.py
postman/: Merchant_Core_API.postman_collection.json  Merchant_Core_API_Local.postman_environment.json
scripts/: migrate.sh
tests/: test_health.py
